# predigt-uploader

./: .gitignore  AGENTS.md  PredigtUploader Systemcheck.cmd  PredigtUploader Textual starten.cmd  PredigtUploader einrichten.cmd  PredigtUploader starten.cmd  README.md  SPEC.md  STATUS.md  TASKS.md  Tests ausführen.cmd  config.example.toml  pyproject.toml
docs/: config.md  development-workflow.md  error-handling.md  install-v1-5.md  manual-test-v1-5.md  manual-test-v1.md  release-v1-5.md  workflow-current.md  workflow-target-v1.md
docs/decisions/: ADR-0001-tech-stack.md
docs/dev-log/: 2026-05-18_1818_cli-wizard-v1.md  2026-05-18_1824_status-dokumentation.md  2026-05-18_1837_mp4-uebernahme-absichern.md  2026-05-18_1850_ffmpeg-pruefung.md  2026-05-18_1905_mp3-ergebnis-pruefen.md  2026-05-18_1920_workflow-endzustand.md  2026-05-18_1923_phase-1-pruefung.md  2026-05-18_1929_config-fehlerbehandlung.md  2026-05-18_1934_logdatei-version-1.md  2026-05-18_1941_zusammenfassung-json-config.md  2026-05-18_1945_phase-1-abschlusspruefung.md  2026-05-18_1949_lokale-testversion-v1.md  2026-05-18_2000_zielbasisordner-und-ja-nein.md  2026-05-18_2322_zielbasisordner-dialog.md  2026-05-18_2347_losslesscut-schnitt-assistent.md  2026-05-19_0020_questionary-terminalauswahl.md  (+44 more)
scripts/: bootstrap.ps1  check-system.ps1  make-release-zip.ps1  release.ps1  run-tui.ps1  run-wizard.ps1  run.ps1  setup-local.ps1  test.ps1
src/predigt_uploader/: cli.py  (+11 more)
tests/: test_cli.py  test_config.py  test_filename.py  test_folders.py  test_manual_test_assets.py  test_processing.py  test_tui.py  test_ui.py
