[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predigt-uploader"
version = "0.1.0"
description = "Internes Windows-Tool zur Vereinfachung des Predigt-Workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gemeindetechnik" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
predigt-uploader = "predigt_uploader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
